--- a/mi9service.Tests/mi9service.Tests.csproj
+++ b/mi9service.Tests/mi9service.Tests.csproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="SampleJSON.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
