sample json file included

--- a/mi9service.Tests/mi9service.Tests.csproj
+++ b/mi9service.Tests/mi9service.Tests.csproj
@@ -121,7 +121,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
-    <Content Include="SampleJSON.txt" />
+    <Content Include="SampleJSON.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
